--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -38,93 +38,106 @@ Configuration Terraform Options:
 
 == Provider
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|api_fingerprint
-|ssl fingerprint of api public key. *Required*
+
+|`api_fingerprint`
+|ssl fingerprint of api public key. 
 |
 |None
+|*Required*
 
-|api_private_key_path
-|path to api private key. *Required*
+|`api_private_key_path`
+|path to api private key. 
 |
 |None
+|*Required*
 
-|region
-|Region where to provision the OLCNE cluster. {uri-oci-region}[List of regions]. *Required*
+|`region`
+|Region where to provision the OLCNE cluster. {uri-oci-region}[List of regions]. 
 |
 |us-phoenix-1
+|*Required*
 
-|tenancy_id
-|Tenancy id of the user. *Required*
+|`tenancy_id`
+|Tenancy id of the user. 
 |
 |None
+|*Required*
 
-|user_id
-|User's id. *Required*
+|`user_id`
+|User's id. 
 |
 |None
+|*Required*
 
 |===
 
 == General OCI
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|compartment_id
-|Compartment id where the OKE Cluster will be provisioned. *Required*
+|`compartment_id`
+|Compartment id where the OKE Cluster will be provisioned. 
 |
 |None
+|*Required*
 
-|label_prefix
-|a string to be prepended to the name of resources. *Required*
+|`label_prefix`
+|a string to be prepended to the name of resources. 
 |
 |
+|*Required*
 
 |===
 
 == SSH Keys
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|ssh_private_key_path
-|path to ssh private key. The same key will be used to access worker nodes using SSH. *Required* if bastion is enabled.
-
+|`ssh_private_key_path`
+|path to ssh private key. The same key will be used to access worker nodes using SSH.
 |
 |None
+|*Required*
 
-|ssh_public_key_path
-|path to ssh public key. The same key will be used to access worker nodes using SSH. *Required* if bastion is enabled.
+|`ssh_public_key_path`
+|path to ssh public key. The same key will be used to access worker nodes using SSH.
 |
 |None
+|*Required*
 
 |===
 
 == OCI Networking
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|netnum
+|`netnum`
 |0-based index of the subnets when the VCN's CIDR is masked with the corresponding newbit value and specified in the form of a map. Used to define the boundaries of the subnets. The values of the map are used as the netnum parameter in the {uri-terraform-cidrsubnet}[cidrsubnet] Terraform function. CIDR blocks for workers and load balancer subnets must not overlap with the CIDR blocks for Kubernetes pods (specified with _pods_cidr_ parameter).
 |e.g.
 [source]
@@ -150,8 +163,9 @@ netnum = {
   workers  = 1
 }
 ----
+|Optional
 
-|newbits
+|`newbits`
 |The difference between the VCN's netmask and the desired subnets' masks specified in the form of a map. The values of the map are used as the newbits parameter in the {uri-terraform-cidrsubnet}[cidrsubnet] Terraform function to calculate each subnet's mask. CIDR blocks for workers and load balancer subnets must not overlap with the CIDR blocks for Kubernetes pods (specified with _pods_cidr_ parameter).
 |e.g.
 [source]
@@ -175,141 +189,165 @@ newbits = {
   workers  = 2
 }
 ----
+|Optional
 
-|vcn_cidr
+|`vcn_cidr`
 |The VCN's CIDR block. The CIDR block specified for the VCN must not overlap with the CIDR block specified for the Kubernetes services (specified with _services_cidr_ parameter).
 |
 |10.0.0.0/16
+|Optional
 
-|vcn_dns_label
-|The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name. *Required*
+|`vcn_dns_label`
+|The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name.
 |
 |
+|*Required*
 
-|vcn_name
-|The name of the VCN that will be appended to the label_prefix. *Required*
+|`vcn_name`
+|The name of the VCN that will be appended to the label_prefix. 
 |
-|
+|olcne
+|*Required*
 
 |===
 
 == Bastion Host
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|bastion_access
+|`bastion_access`
 |CIDR block in the form of a string to which ssh access to the bastion must be restricted to. *_ANYWHERE_* is equivalent to 0.0.0.0/0 and allows ssh access from anywhere.
 |XXX.XXX.XXX.XXX/YY
 |ANYWHERE
+|Optional
 
-|bastion_image_id
+|`bastion_image_id`
 |Custom image id for the bastion host
 |image_id or Autonomous. If the value is set to 'Autonomous', an Oracle Autonomous Linux Platform image will be used instead. If you want to use a custom image, set the image id instead.
 |Autonomous
+|Optional
 
-|bastion_notification_enabled
+|`bastion_notification_enabled`
 |Whether to enable ONS notification for the bastion host.
 |true/false
-|true
+|false
+|Optional
 
-|bastion_notification_endpoint
-|The subscription notification endpoint. Email address to be notified. Only email is currently supported although ONS can also support Slack, Pagerduty among others. *Required*
+|`bastion_notification_endpoint`
+|The subscription notification endpoint. Email address to be notified. Only email is currently supported although ONS can also support Slack, Pagerduty among others.
 |
 |
+|Optional
 
-|bastion_notification_protocol
+|`bastion_notification_protocol`
 |The notification protocol used.
 |EMAIL
 |EMAIL
+|Optional
 
-|bastion_notification_topic
+|`bastion_notification_topic`
 |The name of the notification topic
 |
 |bastion
+|Optional
 
-|bastion_package_upgrade
+|`bastion_package_upgrade`
 |Whether to also upgrade the packages on the bastion host.
 |true/false
 |true
+|Optional
 
-|bastion_shape
-|The shape of bastion instance. *Required*
+|`bastion_shape`
+|The shape of bastion instance.
 |
-|
+|VM.Standard.E2.1
+|Optional
 
-|bastion_timezone
-|The preferred timezone for the bastion host. {uri-timezones}[List of timezones]. *Required*
+|`bastion_timezone`
+|The preferred timezone for the bastion host. {uri-timezones}[List of timezones]. 
 |
-|
+|Australia/Sydney
+|*Required*
 
 |===
 
 == Operator Host
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|operator_image_id
+|`operator_image_id`
 |Custom image id for the operator host
 |image_id or Oracle. If the value is set to Oracle, an Oracle Platform image will be used instead.
 |Oracle
+|Optional
 
-|operator_notification_enabled
+|`operator_notification_enabled`
 |Whether to enable ONS notification for the operator host. *Do not enable for now*.
 |true/false
 |false
+|Optional
 
-|operator_notification_endpoint
+|`operator_notification_endpoint`
 |The subscription notification endpoint. Email address to be notified. Only email is currently supported although ONS can also support Slack, Pagerduty among others.
 |
 |
+|Optional
 
-|operator_notification_protocol
+|`operator_notification_protocol`
 |The notification protocol used.
 |EMAIL
 |EMAIL
+|Optional
 
-|operator_notification_topic
+|`operator_notification_topic`
 |The name of the notification topic
 |
 |operator
+|Optional
 
-|operator_package_upgrade
+|`operator_package_upgrade`
 |Whether to also upgrade the packages for the operator host.
 |true/false
 |true
+|Optional
 
-|operator_shape
+|`operator_shape`
 |The shape of operator instance. *Required*
 |
-|
+|VM.Standard.E2.1
+|Optional
 
-|operator_timezone
+|`operator_timezone`
 |The preferred timezone for the operator host. {uri-timezones}[List of timezones]. *Required*
 |e.g. Australia/Sydney
-|
+|Australia/Sydney
+|Optional
 
 |===
 
 == Availability Domains
 
-[stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,4d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|availability_domains
+|`availability_domains`
 |The Availability Domain where to provision non-OKE resources e.g. bastion host. This is specified in the form of a map.
 | e.g.
 [source]
@@ -325,6 +363,7 @@ availability_domains = {
   bastion     = 1
   operator    = 1
 ----
+|Optional
 
 |===
 
@@ -335,9 +374,10 @@ availability_domains = {
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|tags
+|`tags`
 |Tagging on the base module resources. This is specified in the form of a map of maps.
 | e.g.
 [source]
@@ -380,78 +420,91 @@ tags = {
   }
 }
 ----
+|Optional
 
 |===
 
 == OLCNE Master Nodes
 
-[stripes=odd,cols="1d,3d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,3d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|master_image_id
-|image id to use for master nodes. Provide an image id or a platform Oracle Linux image will be used. *Required*
+|`master_image_id`
+|image id to use for master nodes. Provide an image id or a platform Oracle Linux image will be used.
 |
 |Oracle Linux
+|Optional
 
-|master_package_upgrade
+|`master_package_upgrade`
 |Whether to upgrade the master host packages after provisioning. it’s useful to set this to false during development so the master nodes are provisioned faster.
 |true/false
-|false
+|true
+|Optional
 
-|master_shape
+|`master_shape`
 |shape of master instance.
 |VM.Standard.E2.2
 |VM.Standard.E2.2
+|Optional
 
-|master_size
+|`master_size`
 |number of master nodes to provision. Leave at 1 in this release.
 |1
 |1
+|Optional
 
-|master_timezone
+|`master_timezone`
 |the preferred timezone for the master nodes.
 |Australia/Sydney
 |Australia/Sydney
+|Optional
 
 |===
 
 == OLCNE Worker Nodes
 
-[stripes=odd,cols="1d,3d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,3d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|worker_image_id
-|image id to use for worker nodes. Provide an image id or a platform Oracle Linux image will be used. *Required*
+|`worker_image_id`
+|image id to use for worker nodes. Provide an image id or a platform Oracle Linux image will be used.
 |
 |Oracle Linux
+|Optional
 
-|worker_package_upgrade
+|`worker_package_upgrade`
 |Whether to upgrade the worker host packages after provisioning. it’s useful to set this to false during development so the worker nodes are provisioned faster.
 |true/false
-|false
+|true
+|Optional
 
-|worker_shape
+|`worker_shape`
 |shape of worker instance.
 |VM.Standard.E2.2
 |VM.Standard.E2.2
+|Optional
 
-|worker_size
+|`worker_size`
 |number of worker nodes to provision. 
 |3
 |3
+|Optional
 
-|worker_timezone
+|`worker_timezone`
 |the preferred timezone for the worker nodes.
 |Australia/Sydney
 |Australia/Sydney
+|Optional
 
 |===
 
@@ -462,77 +515,91 @@ tags = {
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|org_unit
-| *Required*
+|`org_unit`
 |
 |
+|
+|*Required*
 
-|org
+|`org`
 |
 |
 |
+|*Required*
 
-|city
+|`city`
 |
 |
 |
+|*Required*
 
-|state
+|`state`
 |
 |
 |
+|*Required*
 
-|country
+|`country`
 |2 letter country code
 |
 |
+|*Required*
 
-|common_name
+|`common_name`
 |
 |
 |
+|*Required*
 
 |===
 
 == OLCNE
 
-[stripes=odd,cols="1d,3d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1d,3d,3a,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
 |Values
-|Default
+|Default Value
+|Required/Optional
 
-|secret_id
-|id of secret where the private ssh key is stored in encrypted format. *Required*
+|`secret_id`
+|id of secret where the private ssh key is stored in encrypted format.
 |
 |
+|*Required*
 
-|environment_name
-|name of the environment
+|`environment_name`
+|name of the environment. 
 |dev
 |dev
+|Optional
 
-|cluster_name
-|name of the cluster
+|`cluster_name`
+|name of the cluster.
 |
 |olcne
+|Optional
 
-|helm_version
+|`helm_version`
 |version of helm client to install on operator
 |
 |3.1.1
+|Optional
 
-|create_kata_runtime
+|`create_kata_runtime`
 |whether to create kata runtime class
 |true/false
 |false
+|Optional
 
-|kata_runtime_class_name
+|`kata_runtime_class_name`
 |the name of the kata runtime class
 |
 |kata
+|Optional
 
 |===
