Use individual modules from base module so we can reuse the operator module as platform operator (#9)
* use individual modules so we can reuse the operator module; renamed the initial operator module in olcne to olcne to avoid confusing names

Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

* upgraded base module, set default options, added docs

Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

* added changes recommended in review by Avi

Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

* added changes recommended by Mark in review

Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

* updated changelog

Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,17 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+== v0.1.1 (June 12, 2020)
+
+* Upgraded base module to 1.2.3
+* Use operator from base module as olcne operator
+* Set default networking parameters and removed redundant variables
+* Upgraded Oracle Linux version to 7.8
+* Added support for new regions (Hyderabad and Chuncheon)
+* Added terraformoptions to documentation
+* Added README.md for HashiCorp registry
+* Removed default backend on nginxcontroller
+
 == v0.1.0 (May 14, 2020)
 
 * First public release
