rename variable: bastion_enabled->enable_bastion, notification_enabled->enable_notification

--- a/modules/terraform-oci-bastion/docs/quickstart.adoc
+++ b/modules/terraform-oci-bastion/docs/quickstart.adoc
@@ -82,7 +82,7 @@ provider "oci" {
 
 * `bastion_shape`
 * `bastion_upgrade`
-* `notification_enabled`
+* `enable_notification`
 * `notification_endpoint`
 
 . Run Terraform:
